--- a/src/app/components/price/price.component.html
+++ b/src/app/components/price/price.component.html
@@ -39,23 +39,23 @@
                 <tbody>
                   <tr>
                     <td>5000 volantes</td>
-                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price1}}</td>
-                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price1}}</td>
+                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>10000 volantes</td>
-                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price2}}</td>
-                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price2}}</td>
+                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>15000 volantes</td>
-                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price3}}</td>
-                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price3}}</td>
+                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>20000 volantes</td>
-                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price4}}</td>
-                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price4}}</td>
+                    <td>{{prices.garnet115.first.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.first.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -71,23 +71,23 @@
                 <tbody>
                   <tr>
                     <td>5000 volantes</td>
-                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price1}}</td>
-                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price1}}</td>
+                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>10000 volantes</td>
-                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price2}}</td>
-                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price2}}</td>
+                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>15000 volantes</td>
-                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price3}}</td>
-                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price3}}</td>
+                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>20000 volantes</td>
-                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price4}}</td>
-                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price4}}</td>
+                    <td>{{prices.garnet115.second.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.second.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -103,23 +103,23 @@
                 <tbody>
                   <tr>
                     <td>5000 volantes</td>
-                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price1}}</td>
-                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price1}}</td>
+                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>10000 volantes</td>
-                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price2}}</td>
-                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price2}}</td>
+                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>15000 volantes</td>
-                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price3}}</td>
-                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price3}}</td>
+                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>20000 volantes</td>
-                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price4}}</td>
-                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price4}}</td>
+                    <td>{{prices.garnet115.three.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.three.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -135,23 +135,23 @@
                 <tbody>
                   <tr>
                     <td>5000 volantes</td>
-                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price1}}</td>
-                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price1}}</td>
+                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>10000 volantes</td>
-                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price2}}</td>
-                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price2}}</td>
+                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>15000 volantes</td>
-                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price3}}</td>
-                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price3}}</td>
+                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                   </tr>
                   <tr>
                     <td>20000 volantes</td>
-                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price4}}</td>
-                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price4}}</td>
+                    <td>{{prices.garnet115.four.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                    <td>{{prices.garnet115.four.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                   </tr>
                 </tbody>
               </table>
@@ -175,23 +175,23 @@
                   <tbody>
                     <tr>
                       <td>5000 volantes</td>
-                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price1}}</td>
-                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price1}}</td>
+                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>10000 volantes</td>
-                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price2}}</td>
-                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price2}}</td>
+                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>15000 volantes</td>
-                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price3}}</td>
-                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price3}}</td>
+                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>20000 volantes</td>
-                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price4}}</td>
-                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price4}}</td>
+                      <td>{{prices.garnet150.first.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.first.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                     </tr>
                   </tbody>
                 </table>
@@ -207,23 +207,23 @@
                   <tbody>
                     <tr>
                       <td>5000 volantes</td>
-                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price1}}</td>
-                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price1}}</td>
+                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>10000 volantes</td>
-                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price2}}</td>
-                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price2}}</td>
+                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>15000 volantes</td>
-                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price3}}</td>
-                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price3}}</td>
+                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>20000 volantes</td>
-                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price4}}</td>
-                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price4}}</td>
+                      <td>{{prices.garnet150.second.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.second.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                     </tr>
                   </tbody>
                 </table>
@@ -239,23 +239,23 @@
                   <tbody>
                     <tr>
                       <td>5000 volantes</td>
-                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price1}}</td>
-                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price1}}</td>
+                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>10000 volantes</td>
-                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price2}}</td>
-                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price2}}</td>
+                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>15000 volantes</td>
-                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price3}}</td>
-                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price3}}</td>
+                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>20000 volantes</td>
-                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price4}}</td>
-                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price4}}</td>
+                      <td>{{prices.garnet150.three.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.three.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                     </tr>
                   </tbody>
                 </table>
@@ -271,23 +271,23 @@
                   <tbody>
                     <tr>
                       <td>5000 volantes</td>
-                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price1}}</td>
-                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price1}}</td>
+                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price1 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price1 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>10000 volantes</td>
-                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price2}}</td>
-                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price2}}</td>
+                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price2 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price2 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>15000 volantes</td>
-                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price3}}</td>
-                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price3}}</td>
+                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price3 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price3 | number:'3.1-2'}}</td>
                     </tr>
                     <tr>
                       <td>20000 volantes</td>
-                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price4}}</td>
-                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price4}}</td>
+                      <td>{{prices.garnet150.four.oneWeek[priceIndex].price4 | number:'3.1-2'}}</td>
+                      <td>{{prices.garnet150.four.threeWeek[priceIndex].price4 | number:'3.1-2'}}</td>
                     </tr>
                   </tbody>
                 </table>
