--- a/src/app/components/design/design.component.html
+++ b/src/app/components/design/design.component.html
@@ -6,8 +6,8 @@
     </div>
   </div>
   
-  <div *ngIf="orders.lentgh === 0"><h1>Buscando data {{orders.lentgh}}</h1></div>
-  <table class="table  table-hover" *ngIf="orders.lentgh != 0">
+  <div *ngIf="orders.length === 0" class="text-center"><h4>No existen ordenes asociadas al estado "diseño".</h4></div>
+  <table class="table  table-hover" *ngIf="orders.length != 0">
     <thead class="thead-dark">
       <tr (click)="test()">
         <th scope="col">Número de cliente</th>
@@ -26,7 +26,7 @@
         <td>{{order.branch.client.name}}</td>
         <td>{{order.product}}</td>
         <td>{{order.garnet}}</td>
-        <td>{{order.time_delivery}}</td>
+        <td>{{order.date_delivery | date}}</td>
         <td>{{order.size}}</td>
         <td>{{order.spaces}}</td>
         <td>{{parseDesign(order.design)}}</td>
@@ -65,10 +65,20 @@
                 <td>{{order.branch.client.name}}</td>
                 <td>{{order.product}}</td>
                 <td>{{order.garnet}}</td>
-                <td>{{order.time_delivery}}</td>
+                <td>{{order.date_delivery | date}}</td>
                 <td>{{order.size}}</td>
                 <td>{{order.spaces}}</td>
                 <td>{{parseDesign(order.design)}}</td>
+              </tr>
+            </tbody>
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col" colspan="8" class="text-center">Especificaciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="8">{{order.specification}}</td>
               </tr>
             </tbody>
           </table>
