--- a/src/app/components/in/in.component.html
+++ b/src/app/components/in/in.component.html
@@ -1,56 +1,23 @@
 
 <app-navbar></app-navbar>
 <div class="content slide data fadeInAnimated fastAnimated">
-  <div class="row">
-    <div class="col-6 offset-md-1 text-left">
-      <h4 class="title">Pendientes por pagar</h4>
-    </div>
-  </div>
-  <table class="table  table-hover" *ngIf="ordersDebit.lentgh != 0">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Número de cliente</th>
-        <th scope="col">Cliente</th>
-        <th scope="col">Producto</th>
-        <th scope="col">Cantidad</th>
-        <th scope="col">Tamaño</th>
-        <th scope="col">Fecha de entrega</th>
-        <th scope="col">Deuda</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let order of ordersDebit; let i = index" class="fadeInAnimated" style="cursor:pointer" data-toggle="modal" data-target="#exampleModal" (click)="selectOrder(i)">
-        <th scope="row">{{order.branch.client.id}}</th>
-        <td>{{order.branch.client.name}}</td>
-        <td>{{order.product}}</td>
-        <td>{{order.quantity}}</td>
-        <td>{{order.size}}</td>
-        <td>{{order.date_delivery | date}}</td>
-        <td style="color:red; font-weight: bold;">{{calculateForIndex(i)}}</td>
-      </tr>
-      <tr>
-        <th colspan="2" style="background:#212529;color:white">Total clientes con deudas</th>
-        <th>{{calculateClientsDebit()}}</th>
-        <th></th>
-        <th colspan="2" style="background:#212529;color:white">Total pendiente por cobrar</th>
-        <th style="color:red; font-weight: bold;">{{calculateTotal()}}</th>
-      </tr>
-    </tbody>
-  </table>
+  
+
 
   <div class="row">
     <div class="col-6 offset-md-1 text-left">
       <h4 class="title">Ingresos</h4>
     </div>
   </div>
-  <table class="table  table-hover" *ngIf="ordersDebit.lentgh != 0">
+  <table class="table  table-hover">
     <thead class="thead-dark">
       <tr class="text-center">
-        <th scope="col" colspan="4">Seleccione el rango de fecha</th>
+        <th scope="col" colspan="4"><p>Seleccione el rango de fecha</p></th>
         <th scope="col" colspan="4">
           Desde <input [(ngModel)]="desde" name="desde" type="date" style="background:#212529;color:white;border:none">
-          Hasta <input [(ngModel)]="hasta" name="hasta" type="date" style="background:#212529;color:white;border:none">
+          Hasta <input [(ngModel)]="hasta" [min]="desde" name="hasta" type="date" style="background:#212529;color:white;border:none">
           <button (click)="searchsOrdersDate()">Buscar</button>
+          <button type="button" *ngIf="desde != undefined && hasta != undefined" title="Imprimir" data-toggle="modal" data-target="#exampleModal">Imprimir</button>
         </th>
       </tr>
       <tr>
@@ -71,12 +38,35 @@
         <td>{{order.branch.client.name}}</td>
         <td>{{order.product}}</td>
         <td>{{order.quantity}}</td>
-        <td>{{payment(i)}}</td>
+        <td>{{payment(i)  | number:'3.1-2'}}</td>
         <td>{{paymentWhere(i)}}</td>
         <td>{{order.method_payment}}</td>
       </tr>
     </tbody>
   </table>
 
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title text-center" id="exampleModalLabel" >Comentario</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <textarea rows="5" [(ngModel)]="comment"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <a [href]="url()" target="_blank">
+          <button type="button" class="btn btn-success" >Ver PDF</button>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 <app-footer></app-footer>
